@@ -24,6 +24,7 @@ docker run -p 8080:8080 \
   -e ZEPPELIN_SPARK_DRIVER_MEMORY="512M" \
   -e ZEPPELIN_SPARK_UI_PORT=4040 \
   -e ZEPPELIN_PYSPARK_PYTHON=/usr/bin/python \
+  -e ZEPPELIN_MEM="-Xms1024m -Xmx1024m -XX:MaxPermSize=512m" \
   -v $(pwd)/notebooks:/usr/local/zeppelin/notebooks \
   -v $(pwd)/conf:/usr/local/zeppelin/conf \
   -v $(pwd)/hive:/hive \
@@ -47,3 +48,4 @@ The docker image requires some environment variables to be set. They are used to
 | `ZEPPELIN_SPARK_UI_PORT` | Port to use for the Spark UI. |
 | `ZEPPELIN_SPARK_DRIVER_MEMORY` | Amount of memory to allocate to the Spark driver process (e.g. `512M`). |
 | `ZEPPELIN_PYSPARK_PYTHON` | Path to python executable for the Spark worker nodes. |
+| `ZEPPELIN_MEM` | Zeppelin JVM Options |
